@@ -12,7 +12,6 @@
 
 
 <!-- ###SHORT_SEARCH_FORM### begin -->
-<!--UdmComment-->
 <div class="tx-mnogosearch-short-search-form">
 	<!-- WARNING! Do not change method to "post"! -->
 	<form action="###SHORT_SEARCH_FORM_ACTION###" method="get">
@@ -20,7 +19,6 @@
 		<input type="submit" name="tx_mnogosearch_pi1[submit]" value="###TEXT_SEARCH###" />
 	</form>
 </div>
-<!--/UdmComment-->
 <!-- ###SHORT_SEARCH_FORM### end -->
 
 
@@ -32,7 +30,6 @@
 
 <hr />
 <!-- ###LONG_SEARCH_FORM### begin -->
-<!--UdmComment-->
 <div id="long-search-form">
 	<!-- WARNING! Do not change method to "post"! -->
 	<form class="tx-mnogosearch-long-form" action="###LONG_SEARCH_FORM_ACTION###" method="get">
@@ -124,7 +121,6 @@
 		###PAGE_BROWSER###
 	</div>
 </div>
-<!--/UdmComment-->
 <!-- ###SEARCH_RESULTS### end -->
 
 </body>
